<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/border_bot_white"
        android:weightSum="1">

        <TextView
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="10sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:text="@string/priceStr"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/timeLeftStr"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="0sp"
            android:gravity="right"
            android:layout_weight="0.35"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/more_details"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
