<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#383838"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:weightSum="1"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".FilterItems">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/filterStr"
            android:textSize="25sp"
            android:layout_marginTop="15sp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
        <Button
            android:id="@+id/popup-exit-filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:textSize="25sp"
            style="?android:attr/borderlessButtonStyle"
            android:background="#383838"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1" />
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingHorizontal="10sp"
        android:gravity="center"
        android:text="@string/filterByStr"
        android:layout_marginBottom="10sp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/filter-dialog-lin-layout"
        android:layout_height="wrap_content">
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_weight="0.1"
        android:layout_height="0dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/sortStr"
            android:textSize="20sp"
            android:layout_marginRight="10sp"
            style="@style/basic_style_white" />
        <Spinner
            android:layout_width="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:id="@+id/sort-location-filter"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/filter-items-but"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="30sp"
        android:text="@string/filterStr"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
</LinearLayout>