<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Hunger">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Hunger">
        <RelativeLayout
            android:id="@+id/main_layout_hg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/app_bar_hg"
                layout="@layout/app_bar" />
            <Button
                android:id="@+id/title_settings_hg"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/settings"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/add_hunger"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:background="@drawable/availability_popup"
                android:text="+"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginRight="10sp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:text="@string/title_hunger"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/toolbar_title_hg"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_below="@+id/main_layout_hg"
            android:id="@+id/upper_nav_menu"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:id="@+id/hg_posts_but"
                android:layout_weight="0.5"
                android:text="@string/hg_posts_label"
                android:textColor="@color/colorPrimary"
                android:background="@color/white"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="0dp"
                android:id="@+id/hg_match_but"
                android:text="@string/hg_match_label"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_weight="0.5"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/upper_nav_menu"
            android:id="@+id/hg_layout"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        </LinearLayout>

        <!--<Spinner
            android:id="@+id/av_list"
            android:layout_width="368dp"
            android:layout_height="0dp" />-->

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>